# dynafen

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
cmake/: Pack.cmake
include/: dynafen.hxx
src/: DynafenBase.cpp  DynafenCore.Linux.cpp  DynafenCore.Win32.cpp  DynafenCore.cpp  DynafenHandle.cpp  dynafen.hpp
test/: test_compile.cpp  test_lib.cpp
